--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
         "govuk-frontend": "^2.13.0",
         "istanbul-reports": "^3.1.5",
         "jsonwebtoken": "^8.5.1",
-        "multer": "^1.4.4",
+        "multer": "^1.4.5-lts.1",
         "multer-s3": "^2.10.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
